--- a/src/app/pages/expenses/expenses.page.html
+++ b/src/app/pages/expenses/expenses.page.html
@@ -16,28 +16,16 @@
 
   <!--  <ion-item *ngFor="let workshop of workshops" [routerLink]="['/detail-workshop/', workshop.id]">-->
   <ion-card>
-  <ion-item>
-    <ion-thumbnail slot="start">
-      <ion-icon style="display: table-footer-group;color: cornflowerblue;" name="cash-outline"></ion-icon>
-    </ion-thumbnail>
-    <ion-label>
-      <h3>Compra de Pneus</h3>
-      <p>Comercial Continental</p>
-      <p>600,00 RS</p>
-    </ion-label>
-  </ion-item>
-</ion-card>
-  <ion-card>
-  <ion-item>
-    <ion-thumbnail slot="start">
-      <ion-icon style="display: table-footer-group;color: cornflowerblue;" name="cash-outline"></ion-icon>
-    </ion-thumbnail>
-    <ion-label>
-      <h3>Chaperia Pintura</h3>
-      <p>Comercial San jose</p>
-      <p>1,200,00 RS</p>
-    </ion-label>
-  </ion-item>
-</ion-card>
-
+    <ion-item class="line-card">
+      <ion-thumbnail slot="start">
+        <ion-icon style="display: table-footer-group;color: cornflowerblue;" name="cash-outline"></ion-icon>
+      </ion-thumbnail>
+      <ion-label>
+        <h3>Compra de Pneus</h3>
+        <p>Comercial Continental</p>
+        <p>600,00 RS</p>
+      </ion-label>
+    </ion-item>
+  </ion-card>
+  
 </ion-content>
