--- a/src/global.scss
+++ b/src/global.scss
@@ -89,4 +89,8 @@ ion-card{
     margin-left: 5px;
 }
 
+.line-card{
+    --border-color: transparent;
+}
+
 @import "~@mobiscroll/angular/dist/css/mobiscroll.scss";
