[ADD] accordion added in workshops

--- a/src/app/pages/maintenances/maintenances.page.html
+++ b/src/app/pages/maintenances/maintenances.page.html
@@ -17,7 +17,7 @@
     <ion-card>
       <ion-item>
     <ion-thumbnail slot="start">
-      <ion-icon style="display: table-footer-group;color: cornflowerblue;" name="cash-outline"></ion-icon>
+      <ion-icon style="display: table-footer-group;color: cornflowerblue;" name="build-outline"></ion-icon>
     </ion-thumbnail>
     <ion-label>
       <h3>Compra de Pneus</h3>
@@ -31,7 +31,20 @@
 <ion-card>
   <ion-item>
     <ion-thumbnail slot="start">
-      <ion-icon style="display: table-footer-group;color: cornflowerblue;" name="cash-outline"></ion-icon>
+      <ion-icon style="display: table-footer-group;color: cornflowerblue;" name="build-outline"></ion-icon>
+    </ion-thumbnail>
+    <ion-label>
+      <h3>Chaperia Pintura</h3>
+      <p>Comercial San jose</p>
+      <p>1,200,00 RS</p>
+    </ion-label>
+  </ion-item>
+ </ion-card> 
+
+ <ion-card>
+  <ion-item>
+    <ion-thumbnail slot="start">
+      <ion-icon style="display: table-footer-group;color: cornflowerblue;" name="build-outline"></ion-icon>
     </ion-thumbnail>
     <ion-label>
       <h3>Chaperia Pintura</h3>
