--- a/src/app/pages/workshops/workshops.page.html
+++ b/src/app/pages/workshops/workshops.page.html
@@ -13,17 +13,15 @@
 </ion-header>
 
 <ion-content>
- <ion-card *ngFor="let workshop of workshops" [routerLink]="['/detail-workshop/', workshop.id]">
-  <ion-item >
-    <ion-thumbnail slot="start">
-      <ion-icon style="display: table-footer-group;color: cornflowerblue;" name="car-sport-outline"></ion-icon>
-    </ion-thumbnail>
-    <ion-label>
-      <h3>{{workshop.nome}}</h3>
-      <p>Av Aviadores del chaco #3454</p>
-      <p>0994 994 272</p>
-    </ion-label>
-  </ion-item>
-  </ion-card>
+
+  <app-mi-acordion *ngFor="let workshop of workshops" 
+     nome="{{ workshop.nome }}" 
+     endereco="{{ workshop.endereco }}" 
+     RUC="{{ workshop.RUC }}" 
+     telefone="{{ workshop.telefone }}"
+     email="{{ workshop.email }}"
+     responsavel="{{ workshop.responsavel }}"
+     (change)="captureName($event)">
+  </app-mi-acordion>
 
 </ion-content>
