[FIX] UI/UX all pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <ion-menu contentId="menu-content" menuId="menu-content" side="start" type="overlay">
       <ion-header>
         <ion-toolbar translucent>
-          <ion-title>Menu</ion-title>
+          <ion-title>SafeCar</ion-title>
         </ion-toolbar>
       </ion-header>
       <ion-content>
@@ -36,7 +36,7 @@
           <ion-menu-toggle auto-hide="false">
             <ion-item [routerLink]="['/maintenances']">
               <ion-icon name="build-outline" slot="start"></ion-icon>
-              <ion-label>Manutencoes</ion-label>
+              <ion-label>Manutenções</ion-label>
             </ion-item>
           </ion-menu-toggle>
           <ion-menu-toggle auto-hide="false">
