--- a/src/app/pages/cars/cars.page.html
+++ b/src/app/pages/cars/cars.page.html
@@ -15,7 +15,9 @@
 <ion-content>
 
   <ion-card *ngFor="let car of cars">
-    <img src="https://cdn.revendamais.com.br/FC/5358/2790454_0_M_fdc3a39cc0.jpg" />
+    <center>
+      <img [routerLink]="['/detail-car/', car.id]" src="../../../assets/img/car1.jpg" />
+    </center>
     <ion-card-header>
       <ion-card-subtitle>{{ car.anho_fabricacao }}</ion-card-subtitle>
       <ion-card-title>{{ car.nome }}</ion-card-title>
@@ -32,13 +34,13 @@
         </ion-col>
         <ion-col size="4">
           <ion-icon name="water-outline"></ion-icon>
-          Nafta
+          {{ car.combustivel }}
         </ion-col>
       </ion-row>
     </ion-grid>
-      <ion-item>
-        <ion-button [routerLink]="['/detail-car/', car.id]" fill="outline" color="success" size="small" slot="end"><ion-icon name="eye-outline"></ion-icon>Detalhes</ion-button>
-        <ion-button [routerLink]="['/maintenances/']" class="btn-spa" fill="outline" color="warning" size="small" slot="end"><ion-icon name="menu-outline"></ion-icon>Manutencoes</ion-button>
+      <ion-item class="line-card">
+        <ion-button mode="ios" [routerLink]="['/detail-car/', car.id]" fill="outline" color="success" size="small" slot="end"><ion-icon name="eye-outline"></ion-icon>Detalhes</ion-button>
+        <ion-button mode="ios" [routerLink]="['/maintenances/']" class="btn-spa" fill="outline" color="warning" size="small" slot="end"><ion-icon name="menu-outline"></ion-icon>Manutenções</ion-button>
       </ion-item>
   </ion-card>
   
