--- a/src/app/pages/user/user.page.html
+++ b/src/app/pages/user/user.page.html
@@ -1,9 +1,83 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>user</ion-title>
+
+  <ion-toolbar color="tertiary">
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/cars"></ion-back-button>
+    </ion-buttons>
+    <ion-title class="ion-text-center" *ngIf="id">Detalhes do Veiculo</ion-title>
+    <ion-title class="ion-text-center" *ngIf="!id">Adicionar Novo Veiculo</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button>
+        <ion-icon name="ellipsis-vertical-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
+
 </ion-header>
 
 <ion-content>
+
+  <ion-card>
+    <ion-card-content>
+
+      <center>
+        <img style="width:70%" src="../../../assets/img/no-image.png" />
+      </center>
+
+      <ion-item>
+        <ion-label position="stacked">(*)Nome</ion-label>
+        <ion-input type="text" autofocus required [(ngModel)]="car.nome"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="stacked">(*)CPF</ion-label>
+        <ion-input type="text" required [(ngModel)]="car.modelo"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="stacked">(*)Nascimento</ion-label>
+        <ion-input type="text" required [(ngModel)]="car.chassi"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="stacked">(*)Email</ion-label>
+        <ion-input type="text" required [(ngModel)]="car.chassi"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="stacked">(*)Senha</ion-label>
+        <ion-input type="text" required [(ngModel)]="car.chassi"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="stacked">(*)Telefone</ion-label>
+        <ion-input type="text" required [(ngModel)]="car.chassi"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="stacked">(*)Endereço</ion-label>
+        <ion-input type="text" required [(ngModel)]="car.chassi"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="stacked">(*)Bairro</ion-label>
+        <ion-input type="text" required [(ngModel)]="car.chassi"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="stacked">(*)Cidade</ion-label>
+        <ion-input type="text" required [(ngModel)]="car.chassi"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="stacked">(*)Estado</ion-label>
+        <ion-input type="text" required [(ngModel)]="car.chassi"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="stacked">(*)Pais</ion-label>
+        <ion-input type="text" required [(ngModel)]="car.chassi"></ion-input>
+      </ion-item>
+      <ion-item-group class="ion-text-center ion-margin-top">
+        <ion-button mode="ios" color="medium" routerLink="/cars">
+          <ion-icon name="arrow-back-outline"></ion-icon>Voltar
+        </ion-button>
+        <ion-button mode="ios" color="success" (click)="savedata(car)">
+          <ion-icon class="m-icon" name="save-outline"></ion-icon>Salvar
+        </ion-button>
+      </ion-item-group>
+
+    </ion-card-content>
+  </ion-card>
 
 </ion-content>
