--- a/src/app/pages/workshops/workshops.page.html
+++ b/src/app/pages/workshops/workshops.page.html
@@ -6,7 +6,7 @@
     <ion-title class="ion-text-center">Mecanicas</ion-title>
     <ion-buttons slot="end">
       <ion-button [routerLink]="['/detail-workshop']">
-        <ion-icon name="add-outline"></ion-icon>
+        <ion-icon name="ellipsis-vertical-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
