Fixes general app - loading , formvalidation into appservice

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <ion-app>
     <ion-split-pane contentId="menu-content" when="xs" [disabled]="true"
     (ionSplitPaneVisible)="onSplitPaneVisible(event)">
-    <ion-menu contentId="menu-content" menuId="menu-content" side="start" type="overlay">
+    <ion-menu mode="ios" contentId="menu-content" menuId="menu-content" side="start" type="overlay">
       <ion-header>
         <ion-toolbar translucent>
           <ion-title>SafeCar</ion-title>
