--- a/src/app/components/mi-acordion/mi-acordion.component.html
+++ b/src/app/components/mi-acordion/mi-acordion.component.html
@@ -1,5 +1,5 @@
 
-<ion-item mode="ios" (click)="toggleAccordion()" class="ion-padding-top">
+<ion-item (click)="toggleAccordion()" class="ion-padding-top">
       <ion-thumbnail slot="start">
         <ion-icon style="display: table-footer-group;color: cornflowerblue;" name="car-sport-outline"></ion-icon>
       </ion-thumbnail>
