--- a/src/app/pages/detail-car/detail-car.page.html
+++ b/src/app/pages/detail-car/detail-car.page.html
@@ -156,7 +156,7 @@
       </ion-item>
       <ion-item>
         <ion-label position="stacked">Observações</ion-label>
-        <ion-textarea placeholder="..."></ion-textarea>
+        <ion-textarea [(ngModel)]="car.observacoes" placeholder="..."></ion-textarea>
       </ion-item>
       <ion-item-group class="ion-text-center ion-margin-top">
         <ion-button mode="ios" color="medium" routerLink="/cars">
