--- a/src/app/pages/detail-maintenance/detail-maintenance.page.html
+++ b/src/app/pages/detail-maintenance/detail-maintenance.page.html
@@ -1,9 +1,87 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>detail-maintenance</ion-title>
+
+  <ion-toolbar color="tertiary">
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/maintenances"></ion-back-button>
+    </ion-buttons>
+    <ion-title class="ion-text-center" *ngIf="id">Detalhes da Manutenção</ion-title>
+    <ion-title class="ion-text-center" *ngIf="!id">Adicionar Nova Manutenção</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button>
+        <ion-icon name="ellipsis-vertical-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
+
 </ion-header>
 
 <ion-content>
+
+  <ion-card>
+    <ion-card-content>
+      <center>
+        <img style="width:70%" src="../../../assets/img/no-image.png" />
+      </center>
+      <ion-segment mode="ios" value="all" style="margin-bottom: 16px;">
+        <ion-segment-button value="all">
+          Detalhes
+        </ion-segment-button>
+        <ion-segment-button value="favorites">
+          Fotos
+        </ion-segment-button>
+      </ion-segment>
+      <ion-item>
+        <ion-label position="stacked">(*)Data</ion-label>
+        <ion-datetime (ionChange)="onChange($event)" autofocus required [(ngModel)]="maintenance.data" display-format="DD/MM/YYYY" min="1970-01-01" max="2021-12-31"></ion-datetime>
+      </ion-item>
+      <ion-grid>
+        <ion-row>
+          <ion-col size="6">
+            <ion-item>
+              <ion-label position="stacked">(*)KM</ion-label>
+              <ion-input type="text" required [(ngModel)]="maintenance.km"></ion-input>
+            </ion-item>
+          </ion-col>
+          <ion-col size="6">
+            <ion-item>
+              <ion-label position="stacked">(*)Próximo KM</ion-label>
+              <ion-input type="text" required [(ngModel)]="maintenance.km_prox"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+      </ion-grid>  
+      <ion-item>
+        <ion-label position="stacked">(*)Manutenção</ion-label>
+        <ion-select class="ion-text-capitalize" interface="popover" required [(ngModel)]="maintenance.manutencao">
+          <ion-select-option value="Filtro de Azeite">Filtro de Azeite</ion-select-option>
+          <ion-select-option value="Filtro de Aire">Filtro de Aire</ion-select-option>
+          <ion-select-option value="Filtro de Combustivel">Filtro de Combustivel</ion-select-option>
+        </ion-select>
+      </ion-item>
+      <ion-item class="select-placeholder">
+        <ion-label position="stacked">(*)Mecanica</ion-label>
+        <ion-select interface="popover" required [(ngModel)]="maintenance.mecanica" class="ion-text-capitalize" placeholder="{{maintenance.mecanica}}">
+          <ion-select-option *ngFor="let workshop of workshops" [value]="workshop.nome">{{workshop.nome}}</ion-select-option>
+        </ion-select>
+      </ion-item>
+      <ion-item>
+        <ion-label position="stacked">(*)Custo</ion-label>
+        <ion-input type="text" required [(ngModel)]="maintenance.custo"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="stacked">Observações</ion-label>
+        <ion-textarea [(ngModel)]="maintenance.observacoes" placeholder="..."></ion-textarea>
+      </ion-item>
+
+      <ion-item-group class="ion-text-center ion-margin-top">
+        <ion-button mode="ios" color="medium" routerLink="/maintenances">
+          <ion-icon name="arrow-back-outline"></ion-icon>Voltar
+        </ion-button>
+        <ion-button mode="ios" color="success" (click)="savedata(maintenance)">
+          <ion-icon class="m-icon" name="save-outline"></ion-icon>Salvar
+        </ion-button>
+      </ion-item-group>
+    </ion-card-content>
+  </ion-card>
 
 </ion-content>
