--- a/src/app/pages/expenses/expenses.page.html
+++ b/src/app/pages/expenses/expenses.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
     <ion-title class="ion-text-center">Despesas</ion-title>
     <ion-buttons slot="end">
-      <ion-button [routerLink]="['/detail-workshop']">
+      <ion-button [routerLink]="['/detail-expense']">
         <ion-icon name="add-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -14,17 +14,19 @@
 
 <ion-content>
 
-  <!--  <ion-item *ngFor="let workshop of workshops" [routerLink]="['/detail-workshop/', workshop.id]">-->
-  <ion-card>
+  <ion-card *ngFor="let expense of expenses" [routerLink]="['/detail-expense/', expense.id]" >
     <ion-item class="line-card">
       <ion-thumbnail slot="start">
         <ion-icon style="display: table-footer-group;color: cornflowerblue;" name="cash-outline"></ion-icon>
       </ion-thumbnail>
       <ion-label>
-        <h3>Compra de Pneus</h3>
-        <p>Comercial Continental</p>
-        <p>600,00 RS</p>
+        <h3>{{expense.nome}}</h3>
+        <p>{{expense.observacoes}}</p>
+        <p>{{expense.data}}</p>
       </ion-label>
+      <ion-note style="font-size: smaller;" slot="end">
+        <p style="color:#008000;">{{expense.custo | currency:'R$ '}}</p>
+      </ion-note>
     </ion-item>
   </ion-card>
   
