--- a/src/app/pages/user/user.page.html
+++ b/src/app/pages/user/user.page.html
@@ -1,18 +1,15 @@
 <ion-header>
-
   <ion-toolbar color="tertiary">
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/cars"></ion-back-button>
+      <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title class="ion-text-center" *ngIf="id">Detalhes do Veiculo</ion-title>
-    <ion-title class="ion-text-center" *ngIf="!id">Adicionar Novo Veiculo</ion-title>
-    <ion-buttons slot="primary">
+    <ion-title class="ion-text-center">Meus Dados</ion-title>
+    <ion-buttons slot="end">
       <ion-button>
         <ion-icon name="ellipsis-vertical-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
-
 </ion-header>
 
 <ion-content>
@@ -26,56 +23,57 @@
 
       <ion-item>
         <ion-label position="stacked">(*)Nome</ion-label>
-        <ion-input type="text" autofocus required [(ngModel)]="car.nome"></ion-input>
+        <ion-input type="text" autofocus required [(ngModel)]="user.nome"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">(*)CPF</ion-label>
-        <ion-input type="text" required [(ngModel)]="car.modelo"></ion-input>
+        <ion-input type="text" required [(ngModel)]="user.cpf"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="stacked">(*)RG</ion-label>
+        <ion-input type="text" required [(ngModel)]="user.rg"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">(*)Nascimento</ion-label>
-        <ion-input type="text" required [(ngModel)]="car.chassi"></ion-input>
+        <ion-input type="text" required [(ngModel)]="user.nascimento"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">(*)Email</ion-label>
-        <ion-input type="text" required [(ngModel)]="car.chassi"></ion-input>
+        <ion-input type="email" required [(ngModel)]="user.email"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">(*)Senha</ion-label>
-        <ion-input type="text" required [(ngModel)]="car.chassi"></ion-input>
+        <ion-input type="password" required [(ngModel)]="user.senha"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">(*)Telefone</ion-label>
-        <ion-input type="text" required [(ngModel)]="car.chassi"></ion-input>
+        <ion-input type="text" required [(ngModel)]="user.telefone"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">(*)Endereço</ion-label>
-        <ion-input type="text" required [(ngModel)]="car.chassi"></ion-input>
+        <ion-input type="text" required [(ngModel)]="user.endereco"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">(*)Bairro</ion-label>
-        <ion-input type="text" required [(ngModel)]="car.chassi"></ion-input>
+        <ion-input type="text" required [(ngModel)]="user.bairro"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">(*)Cidade</ion-label>
-        <ion-input type="text" required [(ngModel)]="car.chassi"></ion-input>
+        <ion-input type="text" required [(ngModel)]="user.cidade"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">(*)Estado</ion-label>
-        <ion-input type="text" required [(ngModel)]="car.chassi"></ion-input>
+        <ion-input type="text" required [(ngModel)]="user.estado"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">(*)Pais</ion-label>
-        <ion-input type="text" required [(ngModel)]="car.chassi"></ion-input>
+        <ion-input type="text" required [(ngModel)]="user.pais"></ion-input>
       </ion-item>
-      <ion-item-group class="ion-text-center ion-margin-top">
-        <ion-button mode="ios" color="medium" routerLink="/cars">
-          <ion-icon name="arrow-back-outline"></ion-icon>Voltar
+      <center>
+        <ion-button mode="ios" color="success">
+          <ion-icon class="m-icon" name="save-outline"></ion-icon>Atualizar dados
         </ion-button>
-        <ion-button mode="ios" color="success" (click)="savedata(car)">
-          <ion-icon class="m-icon" name="save-outline"></ion-icon>Salvar
-        </ion-button>
-      </ion-item-group>
+      </center>
 
     </ion-card-content>
   </ion-card>
