[ADD] page login UI

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,7 +46,7 @@
             </ion-item>
           </ion-menu-toggle>
           <ion-menu-toggle auto-hide="false">
-            <ion-item>
+            <ion-item [routerLink]="['/login']">
               <ion-icon name="log-out-outline" slot="start"></ion-icon>
               <ion-label>Sair</ion-label>
             </ion-item>
