[FIX] optimizing code

--- a/src/app/components/mi-acordion/mi-acordion.component.html
+++ b/src/app/components/mi-acordion/mi-acordion.component.html
@@ -17,7 +17,7 @@
     <ion-card-subtitle><b>Email:</b> {{email}}</ion-card-subtitle>
   </ion-card-header>
   <ion-item class="line-card">
-      <ion-button (click)="broadcastName(telefone)" mode="ios" fill="outline" color="warning" slot="end"><ion-icon name="call-outline"></ion-icon>Chamar</ion-button>
-      <ion-button (click)="broadcastName(endereco)" mode="ios" fill="outline" color="success" slot="end"><ion-icon name="location-outline"></ion-icon>Abrir Maps</ion-button>
+      <ion-button (click)="broadcastName(telefone)" mode="ios" fill="outline" color="warning" slot="end"><ion-icon name="logo-whatsapp" class="m-icon"></ion-icon>Whatsapp</ion-button>
+      <ion-button (click)="broadcastName(endereco)" mode="ios" fill="outline" color="success" slot="end"><ion-icon name="location-outline" class="m-icon"></ion-icon>Abrir Maps</ion-button>
   </ion-item>
 </ion-card>
