--- a/src/app/pages/workshops/workshops.page.html
+++ b/src/app/pages/workshops/workshops.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
     <ion-title class="ion-text-center">Mecanicas</ion-title>
     <ion-buttons slot="end">
-      <ion-button [routerLink]="['/detail-workshop']">
+      <ion-button [routerLink]="">
         <ion-icon name="ellipsis-vertical-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
