--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -16,9 +16,9 @@
       <ion-label>Despesas</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="user">
-      <ion-icon name="person-outline"></ion-icon>
-      <ion-label>Meu Perfil</ion-label>
+    <ion-tab-button tab="maintenances">
+      <ion-icon name="build-outline"></ion-icon>
+      <ion-label>Manutenções</ion-label>
     </ion-tab-button>
 
   </ion-tab-bar>
