--- a/src/global.scss
+++ b/src/global.scss
@@ -26,7 +26,8 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 .m-icon {
-    margin-right: 3px;
+    margin-right: 5px;
+    font-size: 18px;
 }
 
 .alert-wrapper.sc-ion-alert-md {
